--- a/project_proposal.ipynb
+++ b/project_proposal.ipynb
@@ -53,7 +53,7 @@
    "id": "583ea2ce-22f2-4894-bd80-b0a2450b8283",
    "metadata": {},
    "source": [
-    "... etc."
+    "... methods/plan here"
    ]
   },
   {
