updated hypthesis test

--- a/project_final.ipynb
+++ b/project_final.ipynb
@@ -745,21 +745,18 @@
    ],
    "source": [
     "# Hypothesis test\n",
-    "real_estate_final <- real_estate_final |>\n",
-    "mutate(sale_amount = log(sale_amount))\n",
-    "\n",
     "head(real_estate_final)\n",
     "\n",
     "obs_diff_in_means <- real_estate_final |>\n",
     "specify(formula =  sale_amount ~ town) |>\n",
-    "calculate(stat=\"diff in means\", order = c(\"West Hartford\", \"East Hartford\"))\n",
+    "calculate(stat=\"diff in means\", order = c(\"East Hartford\", \"West Hartford\"))\n",
     "\n",
     "null_diff_in_means <-\n",
     "real_estate_final %>% \n",
     "    specify(formula = sale_amount ~ town) %>% \n",
     "    hypothesize(null = \"independence\") %>% \n",
     "    generate(reps = 1000, type = \"permute\") %>% \n",
-    "    calculate(stat=\"diff in means\", order = c(\"West Hartford\", \"East Hartford\"))\n",
+    "    calculate(stat=\"diff in means\", order = c(\"East Hartford\", \"West Hartford\"))\n",
     "\n",
     "# visualize plot with test statistic\n",
     "diff_in_means_plot <- null_diff_in_means %>%\n",
@@ -2335,35 +2332,7 @@
     }
    ],
    "source": [
-    "# now obtain our error probabilities\n",
-    "east_only <- real_estate_final |>\n",
-    "filter(town == \"East Hartford\")\n",
-    "n_east <- nrow(east_only)\n",
-    "\n",
-    "west_only <- real_estate_final |>\n",
-    "filter(town == \"West Hartford\")\n",
-    "n_west <- nrow(west_only)\n",
-    "varwest <- var(scaled_west_data$sale_amount)\n",
-    "\n",
-    "vareast <- var(scaled_east_data$sale_amount)\n",
-    "\n",
-    "scaled_east_data <- east_only %>%\n",
-    "  mutate(across(c(sale_amount), scale))\n",
-    "\n",
-    "scaled_west_data <- west_only %>%\n",
-    "  mutate(across(c(sale_amount), scale))\n",
-    "\n",
-    "\n",
-    "s <- sqrt((varwest / n_west) + (vareast / n_east))\n",
-    "s\n",
-    "obs_diff_in_means\n",
-    "\n",
-    "\n",
-    "hypothesis_errors <- tibble(type_I_error = 0.05,\n",
-    "                        type_II_error = 1-pnorm(qnorm(0.05, 0, s, obs_diff_in_means, s)), \n",
-    "                        power_of_test = pnorm(qnorm(0.05, 0, s, obs_diff_in_means, s)))\n",
-    "\n",
-    "hypothesis_errors"
+    "# now obtain our error probabilities\n"
    ]
   },
   {
