--- a/project_final.ipynb
+++ b/project_final.ipynb
@@ -2676,7 +2676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "b11a8ef5-d308-4dcc-9f74-bb76f1f7d912",
    "metadata": {
     "tags": []
@@ -2706,7 +2706,7 @@
        "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>-26321.64</td><td>-24437.8</td></tr>\n",
+       "\t<tr><td>-26808.97</td><td>-24815.64</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -2716,7 +2716,7 @@
        " ci\\_lower & ci\\_upper\\\\\n",
        " <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t -26321.64 & -24437.8\\\\\n",
+       "\t -26808.97 & -24815.64\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -2725,12 +2725,12 @@
        "\n",
        "| ci_lower &lt;dbl&gt; | ci_upper &lt;dbl&gt; |\n",
        "|---|---|\n",
-       "| -26321.64 | -24437.8 |\n",
+       "| -26808.97 | -24815.64 |\n",
        "\n"
       ],
       "text/plain": [
-       "  ci_lower  ci_upper\n",
-       "1 -26321.64 -24437.8"
+       "  ci_lower  ci_upper \n",
+       "1 -26808.97 -24815.64"
       ]
      },
      "metadata": {},
@@ -2746,12 +2746,12 @@
        "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>1</td><td>West Hartford</td><td>272115.9</td></tr>\n",
-       "\t<tr><td>1</td><td>East Hartford</td><td>272115.9</td></tr>\n",
-       "\t<tr><td>1</td><td>East Hartford</td><td>272115.9</td></tr>\n",
-       "\t<tr><td>1</td><td>East Hartford</td><td>272115.9</td></tr>\n",
-       "\t<tr><td>1</td><td>East Hartford</td><td>272115.9</td></tr>\n",
-       "\t<tr><td>1</td><td>West Hartford</td><td>272115.9</td></tr>\n",
+       "\t<tr><td>1</td><td>East Hartford</td><td>267071.4</td></tr>\n",
+       "\t<tr><td>1</td><td>West Hartford</td><td>267071.4</td></tr>\n",
+       "\t<tr><td>1</td><td>West Hartford</td><td>267071.4</td></tr>\n",
+       "\t<tr><td>1</td><td>West Hartford</td><td>267071.4</td></tr>\n",
+       "\t<tr><td>1</td><td>West Hartford</td><td>267071.4</td></tr>\n",
+       "\t<tr><td>1</td><td>West Hartford</td><td>267071.4</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
@@ -2761,12 +2761,12 @@
        " replicate & town & sale\\_mean\\\\\n",
        " <int> & <chr> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t 1 & West Hartford & 272115.9\\\\\n",
-       "\t 1 & East Hartford & 272115.9\\\\\n",
-       "\t 1 & East Hartford & 272115.9\\\\\n",
-       "\t 1 & East Hartford & 272115.9\\\\\n",
-       "\t 1 & East Hartford & 272115.9\\\\\n",
-       "\t 1 & West Hartford & 272115.9\\\\\n",
+       "\t 1 & East Hartford & 267071.4\\\\\n",
+       "\t 1 & West Hartford & 267071.4\\\\\n",
+       "\t 1 & West Hartford & 267071.4\\\\\n",
+       "\t 1 & West Hartford & 267071.4\\\\\n",
+       "\t 1 & West Hartford & 267071.4\\\\\n",
+       "\t 1 & West Hartford & 267071.4\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
@@ -2775,22 +2775,64 @@
        "\n",
        "| replicate &lt;int&gt; | town &lt;chr&gt; | sale_mean &lt;dbl&gt; |\n",
        "|---|---|---|\n",
-       "| 1 | West Hartford | 272115.9 |\n",
-       "| 1 | East Hartford | 272115.9 |\n",
-       "| 1 | East Hartford | 272115.9 |\n",
-       "| 1 | East Hartford | 272115.9 |\n",
-       "| 1 | East Hartford | 272115.9 |\n",
-       "| 1 | West Hartford | 272115.9 |\n",
+       "| 1 | East Hartford | 267071.4 |\n",
+       "| 1 | West Hartford | 267071.4 |\n",
+       "| 1 | West Hartford | 267071.4 |\n",
+       "| 1 | West Hartford | 267071.4 |\n",
+       "| 1 | West Hartford | 267071.4 |\n",
+       "| 1 | West Hartford | 267071.4 |\n",
        "\n"
       ],
       "text/plain": [
        "  replicate town          sale_mean\n",
-       "1 1         West Hartford 272115.9 \n",
-       "2 1         East Hartford 272115.9 \n",
-       "3 1         East Hartford 272115.9 \n",
-       "4 1         East Hartford 272115.9 \n",
-       "5 1         East Hartford 272115.9 \n",
-       "6 1         West Hartford 272115.9 "
+       "1 1         East Hartford 267071.4 \n",
+       "2 1         West Hartford 267071.4 \n",
+       "3 1         West Hartford 267071.4 \n",
+       "4 1         West Hartford 267071.4 \n",
+       "5 1         West Hartford 267071.4 \n",
+       "6 1         West Hartford 267071.4 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 1 × 10</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>estimate</th><th scope=col>estimate1</th><th scope=col>estimate2</th><th scope=col>statistic</th><th scope=col>p.value</th><th scope=col>parameter</th><th scope=col>conf.low</th><th scope=col>conf.high</th><th scope=col>method</th><th scope=col>alternative</th></tr>\n",
+       "\t<tr><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>-25812.31</td><td>250561.1</td><td>276373.5</td><td>-50.7615</td><td>0</td><td>60913.31</td><td>-26808.97</td><td>-24815.64</td><td>Welch Two Sample t-test</td><td>two.sided</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 1 × 10\n",
+       "\\begin{tabular}{llllllllll}\n",
+       " estimate & estimate1 & estimate2 & statistic & p.value & parameter & conf.low & conf.high & method & alternative\\\\\n",
+       " <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <chr> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t -25812.31 & 250561.1 & 276373.5 & -50.7615 & 0 & 60913.31 & -26808.97 & -24815.64 & Welch Two Sample t-test & two.sided\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 1 × 10\n",
+       "\n",
+       "| estimate &lt;dbl&gt; | estimate1 &lt;dbl&gt; | estimate2 &lt;dbl&gt; | statistic &lt;dbl&gt; | p.value &lt;dbl&gt; | parameter &lt;dbl&gt; | conf.low &lt;dbl&gt; | conf.high &lt;dbl&gt; | method &lt;chr&gt; | alternative &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|\n",
+       "| -25812.31 | 250561.1 | 276373.5 | -50.7615 | 0 | 60913.31 | -26808.97 | -24815.64 | Welch Two Sample t-test | two.sided |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  estimate  estimate1 estimate2 statistic p.value parameter conf.low  conf.high\n",
+       "1 -25812.31 250561.1  276373.5  -50.7615  0       60913.31  -26808.97 -24815.64\n",
+       "  method                  alternative\n",
+       "1 Welch Two Sample t-test two.sided  "
       ]
      },
      "metadata": {},
@@ -2811,16 +2853,17 @@
     "west <- sampling_dist_means |>\n",
     "filter(town == \"West Hartford\")\n",
     "\n",
-    "confidence_interval_value <- \n",
+    "t_test <- \n",
     "    tidy(\n",
     "        t.test(x = east$sale_mean,\n",
     "               y = west$sale_mean,\n",
     "               alternative = \"two.sided\")) \n",
     "\n",
-    "confidence_interval <- data.frame(ci_lower = confidence_interval_value$conf.low, ci_upper = confidence_interval_value$conf.high)\n",
+    "confidence_interval <- data.frame(ci_lower = t_test$conf.low, ci_upper = t_test$conf.high)\n",
     "confidence_interval\n",
     "\n",
-    "head(sampling_dist_means)"
+    "head(sampling_dist_means)\n",
+    "t_test"
    ]
   },
   {
